# terraform-google-mlflow

./: .pre-commit-config.yaml  README.md  main.tf  outputs.tf  variables.tf
examples/complete_config/: .envrc.sample  Makefile  README.md  create_tfvars.sh  main.tf  outputs.tf  pyproject.toml  variables.tf  versions.tf
examples/complete_config/mlflow-server-container/: Dockerfile  requirements.txt  run_server.sh
examples/complete_config/mlflow_client_examples/: mlflow_config.py  pyproject.toml
examples/complete_config/mlflow_client_examples/keras/: keras_track.py  pyproject.toml
examples/complete_config/mlflow_client_examples/prophet/: prophet_track.py  pyproject.toml
examples/complete_config/mlflow_client_examples/sklearn/: pyproject.toml  sklearn_track.py
modules/mlflow/: README.md  main.tf  outputs.tf  variables.tf
modules/mlflow/artifacts/: README.md  main.tf  outputs.tf  variables.tf
modules/mlflow/cloud-run/: README.md  main.tf  outputs.tf  variables.tf
modules/mlflow/database/: README.md  main.tf  outputs.tf  variables.tf
modules/mlflow/logger/: README.md  main.tf  outputs.tf  variables.tf
modules/mlflow/secret_manager/: README.md  main.tf  outputs.tf  variables.tf
modules/network/: README.md  main.tf  outputs.tf  variables.tf
modules/services/: README.md  main.tf  variables.tf
