[tool.poetry]
name = "mlflow-deployment-gcp"
version = "0.1.0"
description = "mlflow server deployment on cloud run with IAP"
authors = ["kev-in047 <kevin.karobia@datatonic.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.8.1"
google-cloud-storage = "^2.4.0"
google-auth = "^2.9.0"

[tool.poetry.dev-dependencies]
prophet = "^1.1"
mlflow = "^1.27.0"
requests = "^2.28.1"
scikit-learn = "^1.1.1"
pandas = "^1.4.3"
numpy = "^1.23.0"
six = "^1.16.0"
matplotlib = "^3.5.2"
plotly = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
