[tool.poetry]
name = "mlflow config"
version = "0.1.0"
description = "Contains configuration for an mlflow server deployed on GCP"
authors = ["kev-in047 <kevin.karobia@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.27.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
protobuf = "^4.21.3"
six = "^1.16.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
