[tool.poetry]
name = "keras mlflow track"
version = "0.1.0"
description = "mlflow tracking for keras example"
authors = ["kev-in047 <kevin.karobia@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.27.0"
numpy = "^1.23.1"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
