[tool.poetry]
name = "sklearn mlflow track"
version = "0.1.0"
description = "sklearn model tracking example using mlflow"
authors = ["kev-in047 <kevin.karobia@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.23.1"
mlflow = "^1.27.0"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
